[gd_scene load_steps=5 format=2]

[ext_resource path="res://Head.tscn" type="PackedScene" id=1]
[ext_resource path="res://snake.gd" type="Script" id=3]
[ext_resource path="res://Prey.tscn" type="PackedScene" id=4]
[ext_resource path="res://Body2.tscn" type="PackedScene" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.364706, 0.470588, 0.337255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="Snake" type="Node2D" parent="."]

[node name="Head" parent="Snake" instance=ExtResource( 1 )]

[node name="Body" parent="Snake" instance=ExtResource( 6 )]

[node name="Prey" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_collision" from="Snake/Body" to="." method="_on_Body_body_collision"]
[connection signal="prey_eaten" from="Prey" to="." method="_on_Prey_prey_eaten"]
